updated opf with corrected durchen

--- a/e6c94c70ac3e4f2cb14cbcdb25fcba27.opf/meta.yml
+++ b/e6c94c70ac3e4f2cb14cbcdb25fcba27.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     8574f2100cc143bb8ee078f06d68870a:
       base_file: v056.txt
       image_group_id: I1PD95902
-      title: ''
+      title: སྟོང་པ་ཉིད་བདུན་ཅུ་པའི་འགྲེལ་པ།
       total_pages: 1605
       volume_number: 57
